tests/test_input_files/good/test_good_lambda_3.punkt
main {
	const h = <> -> <int>->int {
		return <int>-> { return 0. }.
	}.

	var x = h().
}
