tests/test_input_files/bad/test_bad_return_stmt_4.punkt
main {
	const f = <> -> int { return. }.
	f().
}
